--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "run dev",
+    "build": "run build",
+    "start": "run start",
     "lint": "eslint"
   },
   "dependencies": {
