--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "my-bun-app",
+  "name": "barber",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "run dev",
-    "build": "run build",
-    "start": "run start",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
