--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.1",
     "mongoose": "^8.21.0",
     "next": "16.1.1",
     "react": "19.2.3",
@@ -22,6 +23,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "prisma": "^6.19.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
