--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.1",
+    "@prisma/client": "^7.2.0",
+    "mongodb": "^6.21.0",
     "mongoose": "^8.21.0",
     "next": "16.1.1",
     "react": "19.2.3",
