--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.8",
+    "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.25.0",
+    "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
     "next": "16.1.1",
     "react": "19.2.3",
